editing margin for last child to avoid overlap with add input

--- a/main.css
+++ b/main.css
@@ -14,6 +14,10 @@
     position: relative;
 }
 
+#toDoGroup .task:last-child{
+    margin-bottom: 4rem;
+}
+
 .add-task {
     position: absolute;
     bottom: 1rem;
